--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "customer_idea_portal",
-  "version": "1.1.0",
-  "description": "cis",
+  "version": "1.2.0",
+  "description": "Navex idea portal",
   "main": "script.js",
   "files": [
     "script.js"
